# trello

./: .gitignore  AGENTS.md  README.md  env.example  pyproject.toml  session-ses_4489.md
src/trello_fetcher/: __init__.py  __main__.py  fetch_tasks.py  list_boards.py  main.py  tui.py
