[project]
name = "trello-fetcher"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "dakixr", email = "dakixr@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"
